--- a/compContenido/compContenido.html
+++ b/compContenido/compContenido.html
@@ -9,6 +9,6 @@
 <div class="mt-5"></div>
 <footer class="mastfoot mt-5">
   <div class="inner">
-    <p>Template desarrollada con <a href="https://getbootstrap.com/">Bootstrap</a>, por <a href="https://github.com/Xsmxxl">Xsmxxl</a>.</p>
+    <p class="mt-5">Template desarrollada con <a href="https://getbootstrap.com/">Bootstrap</a>, por <a href="https://github.com/Xsmxxl">Xsmxxl</a>.</p>
   </div>
 </footer>
