--- a/compLogin/compLogin.html
+++ b/compLogin/compLogin.html
@@ -10,19 +10,16 @@
         <div class="container d-flex justify-content-center">
           <img src="img_avatar2.png" alt="Avatar" class="avatar">
         </div>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
       </div>
       <div class="modal-body ">
-        <form>
-          <div class="form-group">
-            <label>Usuario</label>
-            <input type="text" class="form-control" placeholder="Introduzca su usuario">
+        <form onsubmit="return false">
+          <div class="form-group" id="user_div">
+            <label for="email_field">Correo</label>
+            <input  type="email" class="form-control" id="email_field" placeholder="Introduzca su correo">
           </div>
-          <div class="form-group">
+          <div class="form-group" id="login_div">
             <label for="inputPassword4">Contraseña</label>
-            <input type="password" class="form-control" id="inputPassword4" placeholder="Introduzca su contraseña">
+            <input  type="password" class="form-control" id="password_field" placeholder="Introduzca su contraseña">
           </div>
           <div class="form-group">
             <div class="form-check">
@@ -30,7 +27,7 @@
               <label class="form-check-label" for="gridCheck">Recordarme</label>
             </div>
           </div>
-          <button type="submit" class="btn btn-outline-primary btn-sm btn-block">Iniciar sesión</button>
+          <button class="btn btn-outline-primary btn-sm btn-block" id="iniciar">Iniciar sesión</button>
         </form>
       </div>
       <div class="modal-footer">
