--- a/home/index.html
+++ b/home/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="favicon.png">
-    <title>test 2</title>
+    <title>test home</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   </head>
-  <body class="text-center">
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column mt-auto" id="contenedor"></div>
-    <script type="module" src="app.js" charset="utf-8"></script>
+  <body>
+    <div class="container mt-auto" id="contenedor"></div>
+    <script type="module" src="home.js" charset="utf-8"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
@@ -26,6 +26,44 @@
         messagingSenderId: "344060592616"
       };
       firebase.initializeApp(config);
+    </script>
+    <script type="text/javascript">
+      firebase.auth().onAuthStateChanged(function(user) {
+        if (user) {
+          // User is signed in.
+          // document.getElementById("user_div").style.display = "block";
+          // document.getElementById("login_div").style.display = "none";
+
+          var user = firebase.auth().currentUser;
+
+          if(user != null){
+
+            // var email_id = user.email;
+            // document.getElementById("user_para").innerHTML = "Bienvenido : " + email_id +" a este pequeño proyecto :D";
+            // setTimeout ("logout(), redireccionar()", 2500);
+            window.alert("Bienvenido");
+            // redireccionar();
+            // setTimeout ("logout()", 2500);
+
+          }
+        } else {
+          // No user is signed in.
+          // document.getElementById("user_div").style.display = "none";
+          // document.getElementById("login_div").style.display = "block"
+          //window.alert("Saliendo");
+          redireccionar("/guardar_notas/");
+        }
+      });
+      function logout(){
+        firebase.auth().signOut();
+      }
+
+      function redireccionar(urlR){
+          //window.locationf="https://xsmxxl.github.io/responsive-pag-001/";
+          // var urlR = "/guardar_notas/home";
+          $(location).attr('href',urlR);
+      }
+
     </script>
   </body>
 </html>
